# dev_bestia_html_templating

./: Cargo.toml  README.md  cache19.txt
automation_tasks_rs/: Cargo.toml
automation_tasks_rs/src/: main.rs
docs/: crates.js  index.html  search-index.js  settings.html  source-files.js
docs/dev_bestia_html_templating/: all.html  fn.process_html.html  index.html  macro.s.html  macro.url_u.html  sidebar-items.js  trait.HtmlTemplatingDataTrait.html
docs/dev_bestia_html_templating/html_processor_mod/: fn.process_html.html  fn.root_element_node_to_html_string.html  index.html  sidebar-items.js  struct.PREFIX.html
docs/dev_bestia_html_templating/html_template_mod/: enum.HtmlOrSvg.html  enum.Node.html  enum.ServerOrClient.html  fn.decode_5_xml_control_characters.html  fn.decode_html_script_node.html  fn.encode_5_xml_control_characters.html  fn.encode_html_script_node.html  fn.extract_children_sub_templates.html  fn.fill_element_node.html  fn.render.html  fn.render_sub_template_match_else.html  fn.render_template_raw_to_nodes.html  fn.replace_with_nodes_match_else.html  fn.replace_with_string_match_else.html  fn.replace_with_url_match_else.html  fn.retain_next_node_or_attribute_match_else.html  fn.root_element_node_to_html_string.html  fn.url_s_zero_to_empty.html  index.html  sidebar-items.js  struct.Attribute.html  struct.ElementNode.html  struct.PrefixForTemplateVariables.html  struct.SubTemplate.html  trait.HtmlServerTemplateRender.html
docs/dev_bestia_html_templating/html_templating_data_trait_mod/: enum.ServerOrClient.html  fn.decode_5_xml_control_characters.html  fn.decode_html_script_node.html  fn.encode_5_xml_control_characters.html  fn.encode_html_script_node.html  fn.url_s_zero_to_empty.html  index.html  sidebar-items.js  struct.Attribute.html  struct.ElementNode.html  struct.PrefixForTemplateVariables.html  trait.HtmlTemplatingDataTrait.html
docs/dev_bestia_html_templating/macros_mod/: index.html
docs/dev_bestia_html_templating/trait_utils_mod/: enum.HtmlOrSvg.html  enum.Node.html  fn.extract_children_sub_templates.html  fn.fill_element_node.html  fn.match_else_for_exists_next_node_or_attribute.html  (+8 more)
src/: html_processor_mod.rs  html_template_mod.rs  html_templating_data_trait_mod.rs  lib.rs  trait_utils_mod.rs  url_utf8_mod.rs  utils_mod.rs
tests/: integration_test.rs
tests /: integration_test.rs
tmp/: temp19.txt
(+47 files in other folders)
