[package]
name = "dev_bestia_html_templating"
version = "0.1.4"
description = "Templating library for html in fullstack Rust, server-side or client-side in wasm"
authors = ["Luciano Bestia"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/lucianobestia/dev_bestia_html_templating"
categories = ["web-programming::http-server"]
keywords = ["server", "http"]
publish = false
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/*"
]

[dependencies]
log = "0.4.6"
unwrap="1.2.1"
reader_for_microxml="2.0.1"
anyhow="1.0.44"
percent-encoding = "2.1.0"