[package]
name = "dev_bestia_html_templating"
version = "0.1.41"
description = "Templating library for html in fullstack Rust, server-side or client-side in wasm"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bestia-dev/dev_bestia_html_templating"
# Allowed categories are listed here <https://crates.io/category_slugs>
categories = ["web-programming::http-server"]
# Keyword must be only one word: lowercase letters, hyphens(-) or numbers, less then 35 characters, at most 5 keywords per crate
keywords = ["server", "http"]
publish = true
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/*"
]

[dependencies]
dev_bestia_string_utils = "0.1.19"
dev_bestia_url_utf8 ="0.1.28"

log = "0.4.6"
unwrap="1.2.1"
reader_for_microxml="2.0.1"
anyhow="1.0.44"
percent-encoding = "2.1.0"
lazy_static="1.4.0"